tests/fixtures/rules-tests/bad/AG-010-v1-csharp-hardcoded-key.cs
string openaiKey = "sk-abc123def456ghi789jkl012mno345p";
var anthropicKey = "sk-ant-abc123def456ghi789jkl012mno345p";
readonly string hfToken = "hf_abc123def456ghi789jkl012mno345p";
const string ApiKey = "sk-proj-abc123def456ghi789jkl012mno345p678";
static string apiKey = "sk-abc123def456ghi789jkl012mno345p";
